--- a/CoPeCo/app/src/main/AndroidManifest.xml
+++ b/CoPeCo/app/src/main/AndroidManifest.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:dist="http://schemas.android.com/apk/distribution"
-          package="br.edu.ufabc.aluno.abarbosa.copeco">
+<manifest
+        xmlns:android = "http://schemas.android.com/apk/res/android"
+        xmlns:dist = "http://schemas.android.com/apk/distribution"
+        package = "br.edu.ufabc.aluno.abarbosa.copeco">
 
-    <dist:module dist:instant="true"/>
+    <dist:module dist:instant = "true" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
+            android:allowBackup = "true"
+            android:icon = "@mipmap/ic_launcher"
+            android:label = "@string/app_name"
+            android:roundIcon = "@mipmap/ic_launcher_round"
+            android:supportsRtl = "true"
+            android:theme = "@style/AppTheme">
+        <activity android:name = ".activities.Chat">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name = "android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name = "android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+                android:name = ".activities.MainActivity"
+                android:label = "@string/app_name"
+                android:theme = "@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name = "android.intent.action.MAIN" />
+
+                <category android:name = "android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
